- fixed broken css and bundle config

--- a/src/peruncore/wwwroot/css/site.css
+++ b/src/peruncore/wwwroot/css/site.css
@@ -11,9 +11,9 @@ body {
 }
 
 .footer {
-    position: absol
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    /* Set the fixed height of the footer here */
     height: 80px;
     background-color: #f5f5f5;
 }
@@ -401,7 +401,11 @@ progress {
 }
 
 /*-----------*/
-.padding-0 {
+.p-0 {
     padding-left: 0 !important;
     padding-right: 0 !important;
+}
+.mtb-10 {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
